--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/WorkoutTracker
-spring.datasource.username=developer
-spring.datasource.password=RootPassword
+spring.datasource.username=root
+spring.datasource.password=root
